--- a/concepts/core-architecture/mocking-architecture.mdx
+++ b/concepts/core-architecture/mocking-architecture.mdx
@@ -1,350 +1,217 @@
 ---
-title: "Mocking Model and Call Expectations"
-description: "Understand how GoogleMock enables behavior-driven development by simulating objects, specifying expected calls, and defining custom actions for mock methods. This page unpacks the conceptual model for mocks, expectations, and action sequences."
+title: "Mocking Architecture"
+description: "Dive into the design and behavior of GoogleMock: how mock classes, expectations, actions, and matchers are constructed and invoked, and how these plug seamlessly into test cases for fine-grained behavioral testing."
 ---
 
-# Mocking Model and Call Expectations
+# Mocking Architecture
 
-Understand how GoogleMock enables behavior-driven development by simulating objects, specifying expected calls, and defining custom actions for mock methods. This page unpacks the conceptual model for mocks, expectations, and action sequences.
+Explore the foundational design of GoogleMock (gMock), diving into how mock classes, expectations, actions, and matchers interplay to enable fine-grained behavioral testing in C++. This guide breaks down the components and mechanisms that let developers create controlled, verifiable mocks to precisely specify and monitor interactions within their tests.
 
 ---
 
-## Introduction to the Mocking Model
+## Overview of gMock's Mocking Architecture
 
-GoogleMock facilitates precise control over C++ object behaviors in tests through *mock objects*. These mocks replace real implementations, letting you simulate how objects behave and interact in your system. The mocking model revolves around:
+GoogleMock empowers users to create mock classes that simulate interfaces or classes for unit testing. At its core, gMock provides an intuitive and declarative syntax to define mocks and link expectations about method calls with precise behaviors.
 
-- **Mock Objects & Methods:** Stand-ins for real objects with mocked methods creating flexible interfaces.
-- **Expectations:** Declarations of expected calls, including argument matchers, order, and frequency.
-- **Actions:** Behaviors assigned to the mocked methods when called — including returning values, side effects, or invoking callbacks.
-- **Sequences & Ordering Constraints:** Mechanisms to enforce call order and dependencies in tests.
+### Key Components
 
-This framework supports behavior-driven development by letting you specify the expected *interactions* between objects and then verify them automatically during test execution.
+- **Mock Classes**: User-defined classes inheriting from interfaces or base classes, employing macros like `MOCK_METHOD` to generate mock method implementations.
+- **Expectations**: Conditions set on mock methods indicating how, when, and with what arguments they should be called using `EXPECT_CALL`.
+- **Default Actions**: Typical behaviors provided by `ON_CALL` or built-in defaults when there’s no specific expectation.
+- **Matchers**: Predicates that validate method arguments, including simple (e.g., `_`, `Eq()`) and composite or custom matchers.
+- **Actions**: Define the behavior of mock methods when called, specifying return values, side effects, or invoking real code.
 
-## Mock Objects: Simulated Collaborators
+These components together create a powerful framework for specifying interaction-based tests.
 
-A *mock object* acts as a proxy for a real class instance, enabling you to set expectations on method calls dynamically. To create a mock:
+## Mock Classes and Their Variants
 
-- Define a mock class inheriting from the abstract or concrete class.
-- Use the `MOCK_METHOD` macro to specify mock methods.
+Creating mock classes using the `MOCK_METHOD` macro declares mock methods with signatures compatible with the original interface. gMock generates these methods to intercept calls, check expectations, and delegate to actions.
 
-Example:
+To control how uninteresting (unexpected but allowed) calls are treated, gMock offers strictness variants:
+
+- **NiceMock**: Suppresses warnings for uninteresting calls, making tests less verbose.
+- **NaggyMock**: (Default mode) Prints warnings on uninteresting calls.
+- **StrictMock**: Treats uninteresting calls as errors, enforcing precise call expectations.
+
+Each variant inherits from the mock class and adjusts runtime behavior accordingly, encouraging progressively strict test enforcement.
+
+### Example: Using NiceMock, NaggyMock, and StrictMock
 
 ```cpp
-#include <gmock/gmock.h>
+using ::testing::NiceMock;
+using ::testing::NaggyMock;
+using ::testing::StrictMock;
 
-class Interface {
+class MockFoo {
  public:
-  virtual ~Interface() = default;
-  virtual int Compute(int x) = 0;
-  virtual void Process(const std::string& data) = 0;
+  MOCK_METHOD(void, DoThis, (), ());
+  MOCK_METHOD(int, Calculate, (int a, int b), ());
 };
 
-class MockInterface : public Interface {
- public:
-  MOCK_METHOD(int, Compute, (int x), (override));
-  MOCK_METHOD(void, Process, (const std::string& data), (override));
-};
+// Nice mock: silent on uninteresting calls
+NiceMock<MockFoo> nice_mock;  // alerts suppressed
+
+// Naggy mock: default, warns on uninteresting calls
+NaggyMock<MockFoo> naggy_mock;  // warns
+
+// Strict mock: errors on uninteresting calls
+StrictMock<MockFoo> strict_mock;  // errors
 ```
 
-Mock methods can be overridden further to handle constness, noexcept, or calling conventions as needed.
+### Constructor Forwarding
 
-### Mock Object Lifecycle and Verification
-
-When a mock object is destroyed, GoogleMock automatically verifies that all *expectations* set on the mock have been met. You can also manually verify and clear expectations early using:
-
-```cpp
-::testing::Mock::VerifyAndClearExpectations(&mock_object);
-// or
-::testing::Mock::VerifyAndClear(&mock_object); // also clears default actions
-```
-
-If expectations are unmet or violated, GoogleMock reports failures immediately to aid debugging.
-
----
-
-## Setting Expectations with EXPECT_CALL
-
-To specify that a mock method should be called with particular arguments a certain number of times, use the `EXPECT_CALL` macro.
-
-### Syntax Overview
-
-```cpp
-EXPECT_CALL(mock_object, MethodName(argument_matchers...))
-    .With(multi_arg_matcher)?
-    .Times(cardinality)?
-    .InSequence(sequences...)*
-    .After(expectations...)*
-    .WillOnce(action)*
-    .WillRepeatedly(action)?
-    .RetiresOnSaturation()?;
-```
-
-- Clauses marked with a question mark are optional.
-- `With` is at most once, must be the first clause if used.
-- `Times` is optional; default is inferred.
-- `InSequence` and `After` can appear multiple times to specify ordering.
-- `WillOnce` and `WillRepeatedly` specify the behavior when matched.
-- `RetiresOnSaturation` controls expectation lifetime.
-
-### Understanding the Components
-
-- **Argument Matchers:** Specify how each argument should be matched (e.g., specific values, wildcards `_`, or sophisticated predicates). Missing matchers imply matching any value.
-
-- **With Clause:** Matches the full tuple of arguments against a multi-argument matcher, adding more complex constraints on arguments collectively.
-
-- **Times Clause:** Specifies how many times the call is expected. Possible values include exact counts (`Exactly(3)`), ranges (`Between(2,4)`), or open bounds (`AnyNumber()`, `AtLeast(n)`). If omitted, GoogleMock infers based on actions specified.
-
-- **Sequence & After Clauses:** Define ordering constraints among expectations:
-  - `InSequence` places expectations in a particular sequence.
-  - `After` specifies that the current expectation must occur only after some other expectations have been satisfied.
-
-- **Actions:** Define what happens when the mock method is called and the expectation matches.
-  - `WillOnce` actions are performed for individual calls.
-  - `WillRepeatedly` action is performed for all subsequent calls after `WillOnce` actions are exhausted.
-
-- **RetiresOnSaturation:** Once the expected number of calls is reached, the expectation retires and no longer matches further calls.
-
-### Example: Specifying Expectations
-
-```cpp
-using ::testing::Return;
-using ::testing::_;
-using ::testing::InSequence;
-
-MockInterface mock;
-
-EXPECT_CALL(mock, Compute(5))
-    .Times(2)
-    .WillOnce(Return(10))
-    .WillOnce(Return(20));
-
-EXPECT_CALL(mock, Process(_))
-    .Times(::testing::AnyNumber());
-
-{
-  InSequence s;
-  EXPECT_CALL(mock, Compute(3)).WillOnce(Return(7));
-  EXPECT_CALL(mock, Compute(4)).WillOnce(Return(8));
-}
-```
-
-In this example:
-- `Compute(5)` is expected twice, returning 10 first and then 20.
-- `Process` can be called any number of times with any argument.
-- Calls to `Compute(3)` and `Compute(4)` are expected in sequence.
-
----
-
-## Default Behavior with ON_CALL
-
-While `EXPECT_CALL` sets *expectations* (verifying calls must happen), `ON_CALL` specifies default *behavior* without imposing requirements on call counts.
-
-Syntax:
-
-```cpp
-ON_CALL(mock_object, MethodName(argument_matchers...))
-    .With(multi_arg_matcher)?
-    .WillByDefault(action);
-```
-
-- `ON_CALL` lets you define what a mock method returns or does when called but does *not* expect the call.
-- These default behaviors are superseded by matching `EXPECT_CALL` actions.
+These wrapper variants forward constructors of the base mock class transparently, enabling easy usage with mock classes that require arguments.
 
 Example:
 
 ```cpp
-ON_CALL(mock, Compute(_)).WillByDefault(Return(0));
+NiceMock<MockBar> nice_bar("argument");
+StrictMock<MockBar> strict_bar(1, 2, "example");
 ```
 
-This sets a fallback behavior for all `Compute` calls with any argument.
+### Caveats
 
----
+- Works only for mock methods defined directly using `MOCK_METHOD` in the mock class.
+- Nested strictness modifiers (e.g., `NiceMock<StrictMock<MockFoo>>`) are unsupported.
+- Mock class destructors should be virtual for proper behavior.
 
-## Calls and Matching
+## Expectations and Their Management
 
-### Matching Expectations
+Expectations specify which mock method calls are important and how they should behave or be validated.
 
-When a mock method is called, GoogleMock searches the expectations in reverse order of declaration and picks the *last* matching active expectation:
+### Setting Expectations
 
-- If none matches but an *ON_CALL* default is present, its action executes.
-- If none matches and no default, the built-in default action runs (e.g., return 0 for numeric types).
-- If the call matches an expectation but exceeds the specified `Times()` count, it is an error unless `RetiresOnSaturation()` is set.
+- Use `EXPECT_CALL(mock, Method(args))` to declare an expectation.
+- Expectations can include clauses such as `.Times()`, `.WillOnce()`, `.WillRepeatedly()`, `.InSequence()`, and `.After()` to fine-tune behavior and ordering.
+- Multiple expectations can exist per method; gMock matches calls against expectations from most recent to oldest, enabling layered behavior.
 
-### Uninteresting vs Unexpected Calls
+### Lifecycle of Expectations
 
-- An *uninteresting call* occurs when a mock method is called that has no matching `EXPECT_CALL` expectation. By default, this emits a warning but does not fail the test.
-- An *unexpected call* occurs when a mock method is called with arguments not matching any set `EXPECT_CALL`. This results in a test failure.
+- Expectations begin active.
+- They can *retire* when saturated or when sequencing dictates.
+- Unmet or violated expectations generate test failures, reported immediately or at mock destruction.
+- When multiple expectations exist, gMock checks each in reverse order and picks the first that matches active criteria.
 
-Use `NiceMock` and `StrictMock` wrappers to control warning and failure behavior on uninteresting calls:
+## Actions and Default Behaviors
 
-- `NiceMock`: suppresses uninteresting call warnings.
-- `StrictMock`: treats uninteresting calls as errors.
+Actions define the code executed when a mock method is invoked under matching expectations.
 
----
+- **Default Action**: Returned for uninteresting calls or when expectations have no specific action via `ON_CALL` or built-in defaults.
+- **WillOnce**: Defines a one-time action performed for a matched call.
+- **WillRepeatedly**: Defines an action performed for every subsequent matched call after all `WillOnce` actions.
 
-## Actions: Customizing Mock Method Behavior
+Custom actions can be provided with callables (functions, lambdas, functors), enabling flexible responses.
 
-An *action* defines what the mock method does when invoked and the expectation matches.
+## Matchers: Precise Argument Validation
 
-### Common Built-in Actions
+Matchers evaluate mock method call arguments to confirm if an expectation applies to a call.
 
-- `Return(value)`: Returns the given value.
-- `ReturnRef(variable)`: Returns a reference to a variable.
-- `ReturnPointee(pointer)`: Returns the value pointed to by a pointer at call time.
-- `Invoke(function/functor/lambda)`: Calls a user-defined callable.
-- `DoAll(action1, action2, ...)`: Performs a sequence of actions, returning the last one's result.
-- `SetArgPointee<N>(value)`: Sets the N-th pointer argument's pointee to a value.
-- `SetArrayArgument<N>(begin, end)`: Copies an array of values into a pointer argument.
-- `InvokeArgument<N>(args...)`: Invokes the N-th argument if it is callable.
-- `IgnoreResult(action)`: Ignores the return value of an action, useful when the mock method returns void.
+- Simple matchers: `_` (wildcard), `Eq(value)`, `Ge(value)`.
+- Complex matchers: via `With()` to match argument tuples as a whole.
+- Custom matchers can be implemented for domain-specific needs.
 
-### Defining Custom Actions
+Matchers support rich composition, enabling precise filtering of calls.
 
-You can write your own actions by:
+## Mock Method Call Flow
 
-- Using lambdas or functors compatible with the mock method's signature.
-- Implementing the `ActionInterface` for fine control.
-- Using the `ACTION` macros for less verbose but type-inferred simple actions.
+1. **Call Interception**: The generated mock method intercepts calls.
+2. **Matcher Evaluation**: gMock evaluates argument matchers against the call.
+3. **Expectation Lookup**: GMock scans expectations backwards to find a suitable match.
+4. **Action Selection**: If matched, selects the corresponding action (`WillOnce` or `WillRepeatedly`), else chooses the default action.
+5. **Action Execution**: Executes the selected action, returning the result.
+6. **Uninteresting Calls Handling**: If no expectation matches, behavior depends on mock strictness:
+   - `NiceMock`: silently proceeds.
+   - `NaggyMock`: prints a warning.
+   - `StrictMock`: generates a failure.
 
-Example of a simple lambda action:
+## Common User Flows
 
-```cpp
-EXPECT_CALL(mock, Compute(_))
-    .WillOnce([](int x) { return x * 2; });
-```
+### Creating a Mock and Setting Expectations
 
-### Handling Move-only Types
+1. Define a mock class with `MOCK_METHOD` for the interface.
+2. Optionally instantiate a mock variant (`NiceMock`, `StrictMock`, or default).
+3. Use `ON_CALL` to specify default behavior.
+4. Use `EXPECT_CALL` to set expectations with matchers and actions.
+5. Run tests exercising the mocks.
+6. On mock destruction, expectations verified automatically.
 
-GoogleMock supports mocking methods with move-only arguments (e.g., `std::unique_ptr`). Use lambdas or explicitly specify actions returning new move-only instances to handle such cases. Example:
+### Handling Uninteresting Calls
 
-```cpp
-EXPECT_CALL(mock, MakeBuzz(_))
-    .WillRepeatedly([](const std::string& text) {
-      return std::make_unique<Buzz>(text);
-    });
-```
+- Use `NiceMock` to suppress warnings if other calls are irrelevant.
+- Use `StrictMock` to fail on unexpected calls to tighten test precision.
 
-### Chaining Actions
+### Advanced Sequence Control
 
-Use `WillOnce` multiple times to specify actions on successive calls and `WillRepeatedly` to specify behavior after exhausting `WillOnce` actions. Use `DoAll` to sequence side effects plus a return value.
+- Use `.InSequence()` or explicit `Sequence` objects to specify call order.
+- Use `.After()` to build complex partial orders.
 
----
+## Practical Tips
 
-## Managing Call Order and Expectations
-
-### Sequences with `InSequence`
-
-To enforce strict call ordering across multiple expectations, wrap expectations in an `InSequence` block:
-
-```cpp
-{
-  InSequence s;
-  EXPECT_CALL(mock, FirstCall());
-  EXPECT_CALL(mock, SecondCall());
-}
-```
-
-The calls to `FirstCall()` and `SecondCall()` must then occur in that order.
-
-### Partial Ordering with `After`
-
-You can relax ordering to a DAG (directed acyclic graph) using the `.After()` clause:
-
-```cpp
-Expectation e1 = EXPECT_CALL(mock, Init());
-EXPECT_CALL(mock, Use()).After(e1);
-```
-
-Here, `Use()` must happen after `Init()`, but other calls can interleave.
-
-### Retiring Expectations
-
-Use `.RetiresOnSaturation()` to retire expectations after their call limits are met, allowing subsequent matching by other expectations.
-
-Example:
-
-```cpp
-EXPECT_CALL(mock, SetValue(7))
-    .Times(2)
-    .RetiresOnSaturation();
-EXPECT_CALL(mock, SetValue(_))
-    .Times(AnyNumber());
-```
-
-Once two calls to `SetValue(7)` happen, further calls to `SetValue(7)` match the catch-all expectation.
-
----
-
-## Advanced Concepts and Best Practices
-
-- **Uninteresting Calls:** By default, calling a mock method without an `EXPECT_CALL` leads to a warning but not failure; use `NiceMock` to silence these warnings.
-- **Repeated Actions:** `WillRepeatedly` defines fallback behavior after `WillOnce` actions.
-- **Match Argument Purposely:** Use argument matchers like `_`, `Eq()`, `Ge()`, or custom matchers to define flexible expectations.
-- **Avoid Over-specification:** Only specify expectations and matchers necessary to verify your test's intent.
-- **Verify Early If Needed:** Use `Mock::VerifyAndClearExpectations()` to verify mock usage before destruction.
-- **Manage Mock Lifetime:** Avoid memory leaks to ensure expectations are verified, or explicitly allow leaks with `Mock::AllowLeak()`.
-
----
-
-## Diagram: Expectation Matching and Call Handling
-
-```mermaid
-sequenceDiagram
-    participant Test
-    participant MockObj
-    participant MockMethod
-    participant ExpectationList
-
-    Test->>MockObj: Call mocked method(args)
-    MockObj->>MockMethod: Receive call
-    MockMethod->>ExpectationList: Search expectations in reverse order
-    alt Expectation matches and call count within limit
-        ExpectationList-->>MockMethod: Matched expectation
-        MockMethod-->>Test: Perform matched action
-    else Expectation matches but saturated
-        MockMethod-->>Test: Error (Too many calls)
-        MockMethod-->>Test: Perform default or fallback action
-    else No matching expectation
-        alt Default action defined via ON_CALL
-            MockMethod-->>Test: Perform ON_CALL action
-        else
-            MockMethod-->>Test: Perform built-in default action
-    end
-```
-
----
+- Define expectations before exercising code to prevent undefined behavior.
+- For mocks with complex constructors, use constructor forwarding in mock variants.
+- Avoid nesting strictness wrappers.
+- Use `Mock::AllowLeak()` if mocks must outlive test scope intentionally.
+- Regularly run tests with `--gmock_verbose=info` for insights into expectation matching.
 
 ## Troubleshooting
 
-### Common Issues
-
-- **Warning: Uninteresting function call** – means a method was called without an `EXPECT_CALL`. If intended, suppress via `NiceMock` or add `EXPECT_CALL(...).Times(AnyNumber())`.
-- **Unexpected mock function call** – a call's arguments don't match any `EXPECT_CALL`; verify your matchers and call sites.
-- **Too many actions** – more `WillOnce` than expected calls; ensure actions correspond precisely with expected call counts.
-- **Unmet expectations** – an expected call was never made; check test logic and ordering.
-
-### Tips
-
-- Use the `--gmock_verbose=info` flag to get detailed logs on how calls were matched.
-- Use sequences and `.After()` to enforce call ordering if your test requires it.
-- Always set expectations (`EXPECT_CALL`) before exercising the mock.
-- If compilation slows with large mocks, move mock class constructor and destructor implementations out of inline headers.
+- **Unexpected Calls**: Use verbosity flags or `EXPECT_CALL(...).Times(0)` to diagnose and disallow.
+- **Uninteresting Call Warnings**: Use `NiceMock` or add broad `EXPECT_CALL(...).Times(AnyNumber())`.
+- **Destructor Calls on Mocks**: If mocking destructors, create a mock method called in the destructor (e.g., `Die()`), and set expectations on it.
 
 ---
 
-## References and Next Steps
+## Mermaid Diagram: Mock Interaction Flow
 
-- [gMock Cookbook](gmock_cook_book.md): Practical recipes for creating and using mocks.
-- [gMock for Dummies](gmock_for_dummies.md): Beginner-friendly introduction.
-- [Mock Object Creation & Configuration](api-reference/mocking-apis/mock-object-creation.md): API details on defining mocks.
-- [Expectations & Cardinalities](api-reference/mocking-apis/expectations-cardinalities.md): Understanding and controlling call expectations.
-- [Actions & Return Values](api-reference/mocking-apis/actions-and-return-values.md): How to customize mock method behavior.
-- [Matchers Reference](api-reference/mocking-apis/matchers.md): Using argument matchers effectively.
+```mermaid
+flowchart TD
 
-Consider exploring guides on advanced testing patterns and integration for deeper mastery:
-- Parameterized and typed tests to improve test coverage.
-- Death tests for verifying program termination behavior.
+  %% Start of mock method call
+  Call["Caller invokes mock method"] --> Intercept["Mock method intercepts call"]
+
+  Intercept --> EvaluateMatchers["Evaluate argument matchers"]
+
+  EvaluateMatchers --> FindExpectation["Search for matching active expectation (reverse order)"]
+
+  FindExpectation -->|Found| CheckSaturation{Is expectation saturated?}
+  FindExpectation -->|Not Found| HandleUninteresting
+
+  CheckSaturation -->|No| SelectAction["Select action (WillOnce or WillRepeatedly)"]
+  CheckSaturation -->|Yes| ExcessiveCall["Excessive call warning/failure"]
+
+  SelectAction --> ExecuteAction["Execute selected action and return result"]
+
+  HandleUninteresting --> StrictnessCheck{Mock strictness?}
+
+  StrictnessCheck -->|NiceMock| DefaultAction["Perform default action silently"]
+  StrictnessCheck -->|NaggyMock| WarnUser["Print uninteresting call warning"]
+  WarnUser --> DefaultAction
+  StrictnessCheck -->|StrictMock| FailTest["Generate test failure"]
+
+  DefaultAction --> End["Return result to caller"]
+  ExecuteAction --> End
+  ExcessiveCall --> End
+  FailTest --> End
+```
 
 ---
 
-*This guide empowers you to leverage GoogleMock’s mocking model effectively for behavior-driven testing in C++ applications, ensuring robust, maintainable, and precise unit tests.*
+## Additional References
+
+- [Defining Mock Classes](gmock_cook_book.md#creating-mock-classes)
+- [Expectations and Actions](api_reference/mocking_and_matchers/expectations_and_actions.md)
+- [Argument Matching](api_reference/mocking_and_matchers/argument_matching.md)
+- [Strict, Nice, and Naggy Mocks](api_reference/mocking_and_matchers/strictness_and_nice_mocks.md)
+- [gMock Cookbook: The Nice, the Strict, and the Naggy](gmock_cook_book.md#NiceStrictNaggy)
+
+For example code demonstrating usage and tests verifying behavior, see the source files such as `gmock-nice-strict.h` and `gmock-nice-strict_test.cc` within the gMock repository.
+
+---
+
+## Summary
+
+GoogleMock’s mocking architecture is designed for precise interaction verification in unit tests. It provides a flexible and powerful system of mock classes, strictness modes, detailed expectations, matchers, and actions, enabling tests to express intent clearly and fail fast on violations. The system manages consistency, ordering, and lifecycle of expectations, while offering practical mechanisms for default behaviors and call handling.
+
+Using the strictness wrappers `NiceMock`, `NaggyMock`, and `StrictMock` allows users to tailor the verbosity and strictness of their tests for gradual hardness and maintainability. Through chainable expectation clauses (`Times`, `WillOnce`, `InSequence`, `After`), complex behaviours and sequences can be tested with confidence.
+
+This architecture forms the backbone that empowers users to write expressive, maintainable, and reliable mock-based tests in C++.
